# rules_cmake_helper

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl
cmd/configure_template/: BUILD.bazel  main.go  main_test.go
examples/: BUILD.bazel  WORKSPACE  config.h.in  main.cc
